revsoled some errors